name:           haskell-sandbox
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/arecarn/haskell-sandbox#readme>
homepage:       https://github.com/arecarn/haskell-sandbox#readme
bug-reports:    https://github.com/arecarn/haskell-sandbox/issues
author:         Ryan Carney
maintainer:     example@example.com
copyright:      2021 Ryan Carney
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/arecarn/haskell-sandbox

library
  hs-source-dirs:
      src
  build-depends:
      base >= 4.7 && < 5
  exposed-modules:
      Lib
  default-language: Haskell2010

executable haskell-sandbox-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , haskell-sandbox
  default-language: Haskell2010

test-suite haskell-sandbox-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >= 4.7 && < 5
    , haskell-sandbox
  default-language: Haskell2010
